--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li><a href="#/">Home</a></li>              
+              <li><a ng-href="#/movie">Movie</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -48,12 +48,14 @@
     </div>
 
     <div class="container">
-    <div ng-view=""></div>
+      <div ng-view=""></div>
+      <br><br>
     </div>
 
     <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+      <div class="container text-center">
+        <p>Movie CRUD project by Luiz Lazzarin</p>
+        <p><a href="http://github.com/luizfelippe">GitHub</a> ☉ ͜つ☉</p>
       </div>
     </div>
 
@@ -75,6 +77,8 @@
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap-sass-official/assets/javascripts/bootstrap.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/restangular/dist/restangular.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -82,6 +86,11 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/movie.js"></script>
+        <script src="scripts/controllers/movie-add.js"></script>
+        <script src="scripts/controllers/movie-view.js"></script>
+        <script src="scripts/controllers/movie-delete.js"></script>
+        <script src="scripts/controllers/movie-edit.js"></script>
         <!-- endbuild -->
 </body>
 </html>
