--- a/app/index.html
+++ b/app/index.html
@@ -37,10 +37,10 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
-              <li><a href="#/">Home</a></li>              
-              <li><a ng-href="#/movie">Movie</a></li>
-              <li><a ng-href="#/about">About</a></li>
+            <ul class="nav navbar-nav" ng-controller="HeaderCtrl">
+              <li ng-class="{ active: isActive('/')}"><a href="#/">Home</a></li>              
+              <li ng-class="{ active: isActive('/movie')}"><a ng-href="#/movie">Movie</a></li>
+              <li ng-class="{ active: isActive('/about')}"><a ng-href="#/about">About</a></li>
             </ul>
           </div>
         </div>
@@ -84,6 +84,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/controllers/header.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/movie.js"></script>
